--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "resource-hub",
   "version": "0.1.0",
-  "homepage": "https://github.com/Anngineer/resource-hub.git",
+  "homepage": "https://anngineer.github.io/resource-hub/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
